# gdgtm

./: CHANGELOG.md  LICENSE  README.md  Readme.md  build_docs.sh  gdgtm_core.py  gdgtm_demo.ipynb  gdgtm_test_script.ipynb  pyproject.toml  temp_landmask.tif
.ipynb_checkpoints/: CHANGELOG-checkpoint.md  README-checkpoint.md  gdgtm_test_script-checkpoint.ipynb  pyproject-checkpoint.toml
Documentation/: .~lock.workflow_summaries.pptx#  gdgtm_core.html  gdgtm_core.md  gdgtm_merge_mosaic.html  gdgtm_merge_mosaic.md  gdgtm_numpys.html  gdgtm_shapefiles.html  gdgtm_stac_gets.html  gdgtm_stac_viewing.html  gdgtm_stac_viewing.md  workflow_summaries.pptx
Documentation/.ipynb_checkpoints/: gdgtm-checkpoint.html  gdgtm_chelsa_gets-checkpoint.html
docs/: gdgtm.get.html  gdgtm.transform.html
docs/.ipynb_checkpoints/: gdgtm.manage-checkpoint.html
src/: __init__.py  auto_workflow.py  gdgtm_chelsa_gets.py  gdgtm_core.py  gdgtm_numpys.py  manage.py  transform.py
src/.ipynb_checkpoints/: __init__-checkpoint.py  auto_workflow-checkpoint.py  manage-checkpoint.py  transform-checkpoint.py
src/gdgtm/: __init__.py  auto_workflow.py  gdgtm_auto_workflow.py  gdgtm_chelsa_gets.py  gdgtm_core.py  gdgtm_merge_mosaic.py  gdgtm_shapefiles.py  gdgtm_stac_gets.py  gdgtm_stac_viewing.py  manage.py  transform.py
test_and_demo_files/: STRUCTHELV_LINE_AUX.sbn  STRUCTHELV_LINE_AUX.sbx  STRUCTHELV_LINE_AUX.shp  STRUCTHELV_LINE_AUX.shp.xml  STRUCTHELV_LINE_AUX.shx  STRUCTHELV_POLYGON_MAIN.dbf  STRUCTHELV_POLYGON_MAIN.shp.xml  STRUCTHELV_POLYGON_MAIN.shx  gadm41_CHE_3.dbf  gadm41_CHE_3.shx
(+10 files in other folders)
