[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "gdgtm"
version = "0.4.0"

dependencies = [
  "rasterio",
  "gdal",
  "os",
  "rpy2"]

requires-python = ">= 3.8"

authors =[
  {name = "Pete Jacobsson", email = "pt.jacobsson@gmail.com"}
  ]
maintainers = [
  {name = "Pete Jacobsson", email = "pt.jacobsson@gmail.com"}
  ]

readme = "README.md"

license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/pete-jacobsson/gdgtm"
