[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "gdgtm"
version = "0.5.5"

dependencies = [
	"GDAL>=3.4.1",
	"numpy>=1.24.3",
	"rasterio>=1.3.10",
	"pystac>=1.10.1",
	"pandas>=2.0.3",
    "datetime>=5.5",
    "dateutil>=2.8.2"
	]

requires-python = ">= 3.8"

authors =[
  {name = "Pete Jacobsson", email = "pt.jacobsson@gmail.com"}
  ]
maintainers = [
  {name = "Pete Jacobsson", email = "pt.jacobsson@gmail.com"}
  ]

readme = "README.md"

license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/pete-jacobsson/gdgtm"
